Completed website functionality backbone

--- a/rocky.html
+++ b/rocky.html
@@ -9,15 +9,20 @@
 </head>
 
 <body>
+    <div class = "scores">
+        <div id = "yourScore"> Your Score: 0</div>
+        <div id = "pcScore"> Computer's Score: 0 </div>
 
+    </div>
+    <div class = buts>
+        <button id = "Rock"> Rock </button>
+        <button id = "Paper"> Paper </button>
+        <button id = "Scissors"> Scissors </button>
+    </div>
 
         <div id = "container"></div>
      
-        <div class = buts>
-            <button id = "Rock"> Rock </button>
-            <button id = "Paper"> Paper </button>
-            <button id = "Scissors"> Scissors </button>
-        </div>
+
     <script src = "jscript.js"> </script>
 </body>
 
